@@ -32,6 +32,10 @@ else
 	confflags += --build=$(DEB_BUILD_GNU_TYPE) --host=$(DEB_HOST_GNU_TYPE)
 endif
 
+ifneq (, $(filter %-udeb, $(shell dh_listpackages -s)))
+	udeb = yes
+endif
+
 ifeq ($(DEB_HOST_ARCH_OS), linux)
 	build_xfbdev = --enable-xfbdev
 	selinux = --enable-xselinux
@@ -189,8 +193,12 @@ $(STAMP_DIR)/tests-%: $(STAMP_DIR)/build-%
 	cd build-$* && $(MAKE) check
 	>$@
 
-build: $(STAMP_DIR)/build-main $(STAMP_DIR)/build-udeb
-build: $(STAMP_DIR)/tests-main $(STAMP_DIR)/tests-udeb
+build: $(STAMP_DIR)/build-main
+build: $(STAMP_DIR)/tests-main
+ifeq ($(udeb), yes)
+build: $(STAMP_DIR)/build-udeb
+build: $(STAMP_DIR)/tests-udeb
+endif
 
 clean: xsfclean
 	dh_testdir
@@ -216,14 +224,16 @@ install: build
 	dh_installdirs
 	
 	cd build-main && $(MAKE) DESTDIR=$(CURDIR)/debian/tmp/main install
+ifeq ($(udeb), yes)
 	cd build-udeb && $(MAKE) DESTDIR=$(CURDIR)/debian/tmp/udeb install
+endif
 	
 	# oh, yuck.
 	find debian/tmp/*/usr/lib/xorg -type f -name '*.la' | \
 	  xargs rm -f
 	
 	# remove modules not needed in d-i
-	rm -r debian/tmp/udeb/usr/lib/xorg/modules/multimedia
+	rm -rf debian/tmp/udeb/usr/lib/xorg/modules/multimedia
 	rm -f debian/tmp/udeb/usr/lib/xorg/modules/libxaa.so
 	rm -f debian/tmp/udeb/usr/lib/xorg/modules/libexa.so
 	rm -f debian/tmp/udeb/usr/lib/xorg/modules/libwfb.so
@@ -267,8 +277,10 @@ binary-arch: build install
 ifeq ($(DEB_HOST_ARCH_OS), linux)
 	install -d debian/xserver-xorg-core/lib/udev/rules.d
 	install -m 644 debian/local/64-xorg-xkb.rules debian/xserver-xorg-core/lib/udev/rules.d
+ifeq ($(udeb), yes)
 	install -d debian/xserver-xorg-core-udeb/lib/udev/rules.d
 	install -m 644 debian/local/64-xorg-xkb.rules debian/xserver-xorg-core-udeb/lib/udev/rules.d
+endif
 endif
 	dh_installdebconf -s
 	dh_installman -s
